<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/llRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Switch

        android:id="@+id/lblSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/main_premium"
        android:gravity="right"
        android:paddingRight="30dp"
        android:paddingTop="30dp"
        android:textSize="20dp"
        />


    <TextView
        android:id="@+id/lblNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_name"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        />

    <EditText
        android:id="@+id/editNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionNext"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

        <requestFocus/>


    <TextView
        android:id="@+id/lblContadorNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chars"
        android:gravity="right"
        android:layout_marginRight="20dp"
        />
    <TextView
        android:id="@+id/lblApellido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_surname"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        />

    <EditText
        android:id="@+id/editApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:imeOptions="actionDone"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        />
    <TextView
        android:id="@+id/lblContadorApellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chars"
        android:gravity="right"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_treatment"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        />


    <RadioGroup
        android:id="@+id/rdgColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgFace"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_mr"
            android:layout_marginLeft="15dp"
            android:paddingTop="15dp"
            android:layout_marginRight="15dp"
            />
        <RadioButton
            android:id="@+id/rdbMr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_Mr"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            android:checked="true"

            />
        <RadioButton
            android:id="@+id/rdbMs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_Ms"
            android:paddingRight="10dp"
            android:layout_marginTop="15dp"
            />
        <RadioButton
            android:id="@+id/rdbMrs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_Mrs"
            android:layout_marginTop="15dp"
            />

    </RadioGroup>

    <CheckBox
        android:id="@+id/chkPolitely"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_Politelity"
        android:checked="true"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"/>



    <Button
        android:id="@+id/btnGreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="150dp"
        android:layout_marginRight="150dp"
        android:text="@string/main_greet"/>


    <ProgressBar style="@style/Widget.AppCompat.ProgressBar.Horizontal"

        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="false"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:max="10"
        android:progress="0"
        />
    <TextView
        android:id="@+id/contador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:paddingRight="30dp"

        />


</LinearLayout>